<resources>
    <string name="app_name">Book Recycler</string>

    <!-- Required by navigation drawer toggle button -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title">Title</string>
    <!-- strings.xml -->
    <string name="category">Category</string>
    <string name="Condition">Condition</string>
    <string name="Price">Price</string>
    <string name="Description">Description</string>

</resources>