<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadItem">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/rectangle_5"
                    android:layout_width="160dp"
                    android:layout_height="155dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="70dp"
                    android:background="@drawable/rectangle"
                    android:clickable="true" ></ImageButton>
                <RelativeLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/add_a_photo"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="115dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="58dp"
                    android:background="@drawable/add_a_photo"
                    />
                <View
                    android:id="@+id/line_6"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="220dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="false"
                    android:layout_alignParentBottom="false"
                    android:background="@drawable/horizontal_linev"
                    />
                <RelativeLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/pen_1"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="27dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="227dp"
                    android:background="@drawable/pen"
                    />
                <TextView
                    android:id="@+id/title"
                    android:layout_width="100dp"
                    android:layout_height="23dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="60dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="228dp"
                    android:text="@string/title"
                    android:textAppearance="@style/title"
                    android:gravity="top"
                    />

                <EditText
                    android:id="@+id/title_edittext"
                    android:layout_width="359dp"
                    android:layout_height="51dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="27dp"
                    android:layout_marginTop="252dp"
                    android:layout_marginEnd="27dp"


                    android:hint="@string/title"
                    android:inputType="textShortMessage" />

                <RelativeLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/category"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="27dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="320dp"
                    android:background="@drawable/category"
                    />
                <TextView
                    android:id="@+id/bookcategory"
                    android:layout_width="100dp"
                    android:layout_height="25dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="60dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="320dp"
                    android:text="@string/category"
                    android:textAppearance="@style/title"
                    android:gravity="top"
                    />
                <Spinner
                    android:id="@+id/category_spinner"
                    android:layout_width="359dp"
                    android:layout_height="51dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="27dp"
                    android:layout_marginStart="27dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/category"

                    />
                <RelativeLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/condtion_img"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="27dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="420dp"
                    android:background="@drawable/item_condition"
                    />
                <TextView
                    android:id="@+id/condtion_of_item"
                    android:layout_width="100dp"
                    android:layout_height="25dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="60dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="420dp"
                    android:text="@string/Condition"
                    android:textAppearance="@style/title"
                    android:gravity="top"
                    />
                <Spinner
                    android:id="@+id/conditon_spinner"
                    android:layout_width="359dp"
                    android:layout_height="51dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="27dp"
                    android:layout_marginStart="27dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/condtion_of_item"

                    />

                <RelativeLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/pricetag"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="27dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="527dp"
                    android:background="@drawable/price_tag"
                    />
                <TextView
                    android:id="@+id/price"
                    android:layout_width="100dp"
                    android:layout_height="24dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="60dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="528dp"
                    android:text="@string/Price"
                    android:textAppearance="@style/title"
                    android:gravity="top"
                    />

                <EditText
                    android:id="@+id/price_editText"
                    android:layout_width="359dp"
                    android:layout_height="51dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="27dp"
                    android:layout_marginTop="552dp"
                    android:layout_marginEnd="27dp"


                    android:hint="@string/Price"
                    android:inputType="number" />
                <RelativeLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/description_img"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="27dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="620dp"
                    android:background="@drawable/price_tag"
                    />
                <TextView
                    android:id="@+id/description"
                    android:layout_width="110dp"
                    android:layout_height="24dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="60dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="620dp"
                    android:text="@string/Description"
                    android:textAppearance="@style/title"
                    android:gravity="top"
                    />
                <EditText
                    android:id="@+id/book_description"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:ems="10"
                    android:layout_marginLeft="27dp"
                    android:layout_marginRight="27dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"
                    android:hint="Book Details"
                    android:layout_marginTop="643dp"
                    android:inputType="textLongMessage|textMultiLine|textPersonName"
                    android:singleLine="false" />

                <Button
                    android:id="@+id/upload_btn"
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:layout_marginRight="27dp"
                    android:layout_marginLeft="27dp"
                    android:textAppearance="@style/title"
                    android:backgroundTint="@color/colorPrimary"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="750dp"
                    android:textColor="#FFFF"
                    android:text="Upload" />
            </RelativeLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>